lesson23/diag-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagnostic-pod
  namespace: dev
  labels:
    app: diagnostic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diagnostic
  template:
    metadata:
      labels:
        app: diagnostic
    spec:
      serviceAccountName: diagnostic-sa
      containers:
      - name: diagnostic-container
        image: curlimages/curl
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "--- List of Wordpress Pods in 'dev' namespace ---";
            curl -s -k -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" \
            https://kubernetes.default.svc/api/v1/namespaces/dev/pods?labelSelector=app%3Dwordpress;
            echo "";
            sleep 3600
